@@ -44,6 +44,7 @@ VERS_1.0 {
 		mosquitto_ssl_opts_set;
 		mosquitto_sub_topic_tokenise;
 		mosquitto_sub_topic_tokens_free;
+		mosquitto_topic_matches_sub;
 	local: *;
 };
 
